--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "ag-grid-community": "^25.3.0",
+    "ag-grid-enterprise": "^25.3.0",
     "ag-grid-react": "^25.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "recoil": "^0.3.1",
+    "sass": "^1.34.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
